Updated lots of shit!! - [IslandObjects, Group Manager, Command System]

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,8 @@ authors: [ Alen_Alex ]
 description: A plugin for practicing bridging
 depend:
   - CoreAPI
+commands:
+  practiceadmin:
+    description: "The adminstrative command for Bridgepractice."
+    permission: "practice.admin"
+
