Messed up everything xD

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,4 +42,5 @@ void-detection:
   level: 20
   only-when-on-island: true
 ########################################################################################################################
+broadcast-new-record: true
 
