SpecMenu, SpectatorCommand, HeadUtility, Added List<Player> for currently playing players

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,4 +11,10 @@ commands:
     permission: "practice.admin"
   island:
     description: "Command for players"
+  playerlist:
+    aliases:
+      - p
+      - plist
+      - players
+    description: "A command for an interactice player list GUI"
 
