--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ authors: [ Alen_Alex ]
 description: A plugin for practicing bridging
 depend:
   - CoreAPI
+softdepend:
+  - PlaceholderAPI
 commands:
   practiceadmin:
     description: "The adminstrative command for Bridgepractice."
