Added Particle Menu, Lobby Validations, Added API PlayerGame End,Added Timer Menu, Added Setback, Made Holograms Configurable

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,4 +21,12 @@ commands:
     description: "A command for an interactice player list GUI"
   timer:
     description: "Player timer related commands!"
+  effect:
+    description: "Player effect related commands"
+
+permissions:
+  practice.gui.particle:
+    default: true
+  practice.timer:
+    default: true
 
