--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,8 +42,15 @@ void-detection:
   level: 20
   only-when-on-island: true
 ########################################################################################################################
+##Do we need to broadcast to all players when a new record has been done
 broadcast-new-record: true
 ########################################################################################################################
+##Holographic Configurations
+##enabled --> Whether to enable holograms support. REQUIRES HOLOHRAPHIC DISPLAY AND HOLOGRAPHIC EXTENSION FOR PLACEHOLDER API SUPPORT
+##NOTE --> This will automatically disabled here once server detects HOLOGRAPHIC DISPLAYS is missing!
+##hologramoffset-Y -> Changes the location of Y
+##startingLocation --> Text to be displayed where the starting holo location
+##endingLocation --> Text to be displayed where ending location
 holograms:
   enabled: true
   hologramoffset-Y: 2
@@ -54,4 +61,9 @@ holograms:
   endingLocation:
     - "&fStand on the block below to"
     - "complete your session"
-
+########################################################################################################################
+##settings:
+##Some common settings
+##Set the location of server main-lobby, its PREFERRED to set using /practiceadmin setlobby
+settings:
+  lobby-location:
