Added Firework / FireworkUtilities Worked up login for LeaderboardManager Added Firework Particle Menu Added PlayerInteractEvent, PlayerInteractEvent.java Added Placeholders Leaderboard and refresh timer Fixed player of an islad leaderboard

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -64,6 +64,9 @@ holograms:
 ########################################################################################################################
 ##settings:
 ##Some common settings
-##Set the location of server main-lobby, its PREFERRED to set using /practiceadmin setlobby
+##lobby-location -> Set the location of server main-lobby, its PREFERRED to set using /practiceadmin setlobby
+##leaderboard-refresh-mins -> How frequent do leaderboards need to refreshed in mins!
+##DON'T SET IT TO LESS THAN 1
 settings:
   lobby-location:
+  leaderboard-refresh-mins: 5
