Hooked With AdvancedReply-API, Replay Menu, Langauge.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ depend:
   - CoreAPI
 softdepend:
   - PlaceholderAPI
+  - AdvancedReplay
 commands:
   practiceadmin:
     description: "The adminstrative command for Bridgepractice."
