--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -85,6 +85,7 @@ hook:
   holographicdisplays-api: true
   placeholder-api: true
   advancedreplay-api: true
+  vault-api: true
 ########################################################################################################################
 ##settings:
 ##Some common settings
